[metadata]
name = lambda-asyncio
version = attr: lambda_asyncio.__version__
description = Micro-framework to effectively run asyncio functions in AWS LAMBDA
long_description = file: README.md, CHANGELOG.md, LICENSE
license = Apache License 2.0
license_files = LICENSE

classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    aws-lambda-typing
    typing-extensions

[options.package_data]
* = *.md
"" = py.typed

[options.entry_points]
console_scripts =
    lambda-asyncio = lambda_asyncio.local:main

[options.extras_require]
test =
    pre-commit
    pytest>=7.1.0
    pytest-asyncio
    mypy
    isort
    autopep8
    flake8

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    lambda_asyncio.tests*

[flake8]
max-line-length = 90
ignore = E722

[tool:pytest]
asyncio_mode = strict

[semantic_release]
version_variable = lambda_asyncio/__init__.py:__version__
branch = main
